# IoTPlatform

./: .gitignore  .gitmodules  .humanization_start.sh.swp  CMakeLists.txt  README.md  humanization_start.sh  partitions.csv  partitions_c3.csv  partitions_c6.csv  partitions_s3_16m.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/: pull_request_template.md
components/: sdkconfig.defaults
components/GUI/: CMakeLists.txt
components/GUI/include/: LVGLInterface.h  lvglGui.h
components/GUI/srcs/: lvglGui.c
components/GlobalInit/: CMakeLists.txt  GlobalInit.c
components/GlobalInit/include/: GlobalInit.h
components/HttpsComponent/: HttpsRequests.c
components/HttpsComponent/include/: HttpsRequests.h
components/LCD/: CMakeLists.txt  Kconfig  esp_lcd_backlight.c  esp_lcd_ili9488.c  esp_lcd_ili9488_backlight.c
components/LCD/include/: esp_lcd_backlight.h  esp_lcd_ili9488.h  esp_lcd_ili9488_backlight.h
components/MQTT/: CMakeLists.txt  MQTT_Config.c  MQTT_Core.c  MQTT_Interface.c
components/MQTT/include/: MQTT_Core.h  MQTT_Interface.h
components/MatterInterface/: CMakeLists.txt  DoneCoffeeMaker.cpp  DoneCoffeeMaker.h  DoneMatterEndpoint.cpp  DoneMatterEndpoint.h  Kconfig  MatterInterface.cpp  MatterInterface.h  app_driver.cpp  app_priv.h
components/SpotifyInterface/: CMakeLists.txt  JsonExtraction.c  SpotifyHttpLocalServer.c  SpotifyInterface.c
components/SpotifyInterface/include/: SpotifyAPICall.h  SpotifyInterface.h  SpotifyTypedef.h
components/SpotifyInterface/lib/: SpotifyTypedef.h
components/Utilities/: CMakeLists.txt  JsonUtility.c  Kconfig
components/Utilities/Buzzer/: Buzzer.c  Buzzer.h
components/Utilities/JsonUtility/: JsonUtility.c
components/Utilities/Log/: Custom_Log.c  Custom_Log.cpp  Custom_Log.h  Readme.md
components/Utilities/NetworkChecker/: NetworkChecker.c  NetworkChecker.h
components/Utilities/SharedBus/: CoffeeMakerInfo.h  PacketInfo.h  README.md  SharedBus.c  SharedBus.cpp  SharedBus.h
components/Utilities/SharedBus/include/: CoffeeMakerInfo.h  GuiRefreshInfo.h  MQTTEventInfo.h  MatterEventInfo.h  MqttInfo.h  PacketInfo.h  SharedBus.h
components/Utilities/include/: JsonUtility.h
components/lvgl_esp32_drivers/lvgl_tft/: rm67162Lilygo.h
components/nvsFlash/: SpiffsManger.c
components/nvsFlash/include/: SpiffsManger.h
components/rm67162/: CMakeLists.txt  rm67162.c  rm67162.h  rm67162_QSPI_pins_config.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  Kconfig  Memory.cpp  Memory.h  ServiceManger.cpp  ServiceManger.h  TaskManger.h  app_main.c  app_main.cpp  idf_component.yml  main.c
main/CoffeeMaker/: CoffeeMakerApp.cpp  CoffeeMakerApp.h  CoffeeMakerApp.hpp
main/Global/: Global.h
main/PulsCounter/: PulseCounter.c  PulseCounter.h
main/ServiceManager/: ServiceManager.cpp  ServiceManager.h  ServiceManger.cpp  ServiceManger.h  ServiceMngr.cpp  ServiceMngr.hpp
resources/changed-resources/idf-5.2/components/partition_table/: Kconfig.projbuild
