idf_component_register(
    SRCS
    
"generated/widgets_init.c"
"generated/guider_fonts/lv_font_montserratMedium_16.c"
"generated/guider_fonts/lv_font_montserratMedium_19.c"
"generated/guider_fonts/lv_font_montserratMedium_22.c"
"generated/images/_select_grind_size_alpha_90x90.c"
"generated/images/_icon_coffee_grind_lvl_3_alpha_80x80.c"
"generated/images/_icon_coffee_grind_lvl_1_alpha_80x80.c"
"generated/images/_icon_coffee_powder_alpha_80x80.c"
"generated/images/_frame_alpha_400x90.c"
"generated/images/_icon_coffee_grind_lvl_2_alpha_80x80.c"
"generated/images/_select_your_drink_alpha_90x90.c"
"generated/images/_coffee_alpha_50x50.c"
"generated/images/_icon_tea_leaf_alpha_80x80.c"
"generated/images/_icon_coffee_beans_alpha_80x80.c"
"generated/events_init.c"
"generated/setup_scr_screen.c"
"generated/gui_guider.c"
"srcs/lvglTimer.c"
"srcs/lvglGui.c"
 INCLUDE_DIRS 

"generated"
"generated/guider_customer_fonts"
"include"
     REQUIRES lvgl__lvgl lvgl_esp32_drivers  driver esp_timer GlobalInit driver espressif__button Utilities) 